lab1/routeTableAssoc.tf
resource "aws_route_table_association" "subnet_main" {
  subnet_id      = "subnet-071947b97ecd19b4c"
  route_table_id = "rtb-0bb15ce0076cd3104"
}
